--- a/myplayer/CMakeLists.txt
+++ b/myplayer/CMakeLists.txt
@@ -7,8 +7,10 @@ add_library( # Sets the name of the library.
         native-lib
 
         SHARED
-
-        src/main/cpp/native-lib.cpp )
+        src/main/cpp/WlAudio.cpp
+        src/main/cpp/native-lib.cpp
+        src/main/cpp/WlCallJava.cpp
+        src/main/cpp/WlFFmpeg.cpp)
 
 add_library( avcodec-57 SHARED IMPORTED)
 set_target_properties( avcodec-57
