--- a/myplayer/CMakeLists.txt
+++ b/myplayer/CMakeLists.txt
@@ -10,7 +10,9 @@ add_library( # Sets the name of the library.
         src/main/cpp/WlAudio.cpp
         src/main/cpp/native-lib.cpp
         src/main/cpp/WlCallJava.cpp
-        src/main/cpp/WlFFmpeg.cpp)
+        src/main/cpp/WlFFmpeg.cpp
+        src/main/cpp/WlQueue.cpp
+        src/main/cpp/WlPlaystatus.cpp)
 
 add_library( avcodec-57 SHARED IMPORTED)
 set_target_properties( avcodec-57
