--- a/myplayer/build.gradle
+++ b/myplayer/build.gradle
@@ -15,6 +15,7 @@ android {
     externalNativeBuild {
       cmake {
         cppFlags "-frtti -fexceptions"
+        arguments "-DANDROID_STL=c++_shared"
         abiFilters 'armeabi-v7a'
       }
     }
